2007-09-06  Simon Budig  <simon@gimp.org>

	* plug-ins/common/convmatrix.c: there is no need to mess
	with the selected channels within check_config(). Also fix
	bug with with copying its values into the chanmask
	in convolve_image()

	Fixes bug #472518

2007-09-06  Simon Budig  <simon@gimp.org>

	* plug-ins/script-fu/tinyscheme/scheme-private.h: quick fix:
	raise the cell segment size as well as the number of possible
	segments to reduce the likelihood of a failing (make-vector)

	(yes, this is a hack and no proper fix)

2007-09-04  Simon Budig  <simon@gimp.org>

	* app/vectors/gimpbezierstroke.c: Fix initialization of the
	delta vectors. Fixes bug #473515

2007-09-04  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpparamspecs.c: remove unbalanced "*/"

	* app/core/gimpdrawable-transform.c
	* app/core/gimp-transform-resize.c: formatting.

2007-09-04  Simon Budig  <simon@gimp.org>

	* app/core/gimpparamspecs.c: fix NULL handling and formatting.

2007-09-03  Michael Natterer  <mitch@gimp.org>

	* configure.in: bump version to 2.4.0-rc3.

2007-09-03  Michael Natterer  <mitch@gimp.org>

	* Made 2.4.0-rc2 release.

	* app/Makefile.am (dist-dump-gimprc): added some sed voodoo to
	make sure the num-processors in the distributed gimprc and its
	manpage don't depend on the machine that does make dist.

2007-09-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-transform-region.c: Applied slightly reformatted
	patch from Jakub Friedl and Daniel Hornung which ROUND()s the
	floating point result values before assigning them to integers to
	avoid reducing the output space to [0..254] (thus darkening the
	image). Fixes bug #472806.

2007-09-03  Michael Natterer  <mitch@gimp.org>

	* data/tips/Makefile.am
	* desktop/Makefile.am:
	s/.intltool-merge-cachemake/.intltool-merge-cache/ to fix
	distcheck, probably a "make" was entered in the wrong window.

2007-09-02  Michael Natterer  <mitch@gimp.org>

	* configure.in: bump version to 2.4.0-rc2.
